Fixed the ui on navbar dark mode toogle and changed the fonts

--- a/components/css/main.css
+++ b/components/css/main.css
@@ -36,6 +36,7 @@ html.dark {
 
 html {
   scroll-behavior: smooth;
+  data-scroll-behavior: smooth;
   --font-body: var(--font-inter);
   --font-zoya: var(--font-mynaruse-flare);
 }
